add API and function
