# swagger/swagger.yaml
@@ -579,6 +579,23 @@ paths:
         passthroughBehavior: when_no_templates
         httpMethod: POST
         type: aws_proxy
+  /articles/random:
+    get:
+      description: '記事をランダムに取得'
+      responses:
+        "200":
+          description: "ランダムな記事内容取得"
+          schema:
+            $ref: '#/definitions/ArticleContent'
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ArticlesRandom.Arn}/invocations
+        passthroughBehavior: when_no_templates
+        httpMethod: POST
+        type: aws_proxy
   /articles/{article_id}:
     get:
       description: "指定されたarticle_idの記事情報を取得"
